<resources>
    <string name="app_name">lab1_2</string>
    <string name="back_btn">Назад</string>
    <string name="main_name">Кулинарные рецепты</string>
    <string name="brk_name">Завтрак</string>
    <string name="lnch_name">Обед</string>
    <string name="dnn_name">Ужин</string>
    <string name="lng_name">Выбор языка</string>
    <string name="lng_btn">Русский</string>
    <string name="lng_btn2">Английский</string>
    <string name="lng_btn3">Японский</string>
    <string name="brk_1">Омлет</string>
    <string name="ingr">Ингредиенты:</string>
    <string name="brk_1_2">1. Яйца\n2. Молоко\n3. Топленое масло\n4. Соль</string>
    <string name="prig">Приготовление:</string>
    <string name="brk_1_3">1. Яйца хорошо помойте. Аккуратно разбейте их в мисочку.\n2. Размешайте яйца вилкой или венчиком.\n3. Немного посолите омлетную смесь.\n4. Влейте в яичную смесь молоко.\n5. Перемешайте омлетную смесь до однородного состояния.\n6. Сковороду, в которой будете готовить омлет, смажьте маслом. Хорошо разогрейте сковороду с маслом.\n7. Вылейте омлетную массу в сковороду. Готовьте на маленьком огне. Омлет будет готов, когда не останется жидких участков во всей яичной массе.</string>
    <string name="brk_2">Овсяная каша</string>
    <string name="brk_2_2">1. Овсяные хлопья\n2. Молоко\n3. Сливочное масло\n4. Сахар\n5. Соль</string>
    <string name="brk_2_3">1. Возьмите подходящий сотейник для варки каши. Всыпьте хлопья, налейте молоко. Добавьте соль и сахар.\n2. Поставьте сотейник с кашей на средний огонь.\n3. Молоко тем временем закипит, перемешайте его, чтобы хлопья не прилипли ко дну.\n4. Оставьте кашу вариться на маленьком огне на 15-20 минут.\n5. Когда каша будет готова, выключите огонь и положите в нее сливочное масло.</string>
    <string name="brk_3">Творожная запеканка</string>
    <string name="brk_3_2">1. Творог\n2. Манка\n3. Сахар\n4. Сливочное масло\n5. Молоко\n6. Яйца\n7. Ванилин</string>
    <string name="brk_3_3">1. Творог протрите через мелкое сито или пробейте блендером.\n2. В емкости подходящего размера соедините яйца с сахаром. Взбейте смесь миксером до образования устойчивой пышной пены. Добавьте протертый творог и молоко. Продолжайте взбивание до однородного состояния.\n3. Добавьте мягкое сливочное масло. Еще раз взбейте смесь до однородности.\n4. По частям добавьте манную крупу. Каждый раз взбивайте массу миксером на небольшой скорости.\n5. Оставьте тесто на 15-30 минут, чтобы крупа разбухла. Заранее, за 10-20 минут до выпекания, включите духовку разогреваться до 180°С. Переложите тесто в подходящую форму для запекания.\n6. Выпекайте запеканку около 30 минут до румяности. Готовую запеканку остудите.</string>
    <string name="lnch_1">Жаркое из свинины</string>
    <string name="lnch_1_2">1. Свинина\n2. Картошка\n3. Бульон\n4. Болгарский перец\n5. Лук\n6. Морковь\n7. Растительное масло\n8. Перец черный молотый\n9. Соль</string>
    <string name="lnch_1_3">1. Свинину вымойте и нарежьте средними кусочками.\n2. Картофель очистите. Клубни нарезать.\n3. Луковицу среднего или крупного размера разрежьте на четыре части.\n4. Морковь нарежьте не очень тонкими кружочками.\n5. Болгарский перец очистите от семян и плодоножки и нарежьте средними кусочками.\n6. В сковороде разогрейте часть растительного масла. Обжарьте на нем свинину до золотистой корочки. В конце мясо посолите, поперчите.\n7. В миске соедините все овощи, влейте оставшееся растительное масло. Все посолите, поперчите и перемешайте.\n8. Переложите мясо и овощи в форму для запекания. Влейте бульон.\n9. Накройте форму фольгой или жаропрочной крышкой, если она есть и поставьте в разогретую до 180°С духовку. Время запекания 1-1,5 часа.\n10. Готовое жаркое посыпьте рубленой зеленью.</string>
    <string name="lnch_2">Куриный суп</string>
    <string name="lnch_2_2">1. Курица\n2. Картошка\n3. Лук репчатый\n4. Морковь\n5. Болгарский перец\n6. Вода\n7. Растительное масло\n8. Соль\n9. Специи сухие</string>
    <string name="lnch_2_3">1. Курицу промойте, сложите в кастрюлю и залейте водой. Поставьте на огонь и доведите до кипения. Варите на небольшом огне 25-30 минут. Немного подсолите. Когда курица сварится извлеките её из бульона, немного остудите и отделите мясо от костей. Бульон процедите. Верните мясо в бульон и поставьте обратно на огонь. Доведите до кипения.\n2. Очищенный картофель нарежьте на небольшие кусочки и выложите в кипящий бульон. Варите картофель минут 15-20. За время варки картофель станет мягкий.\n3. Пока варится картофель займитесь овощной зажаркой. Лук и морковь очистите от кожуры и ополосните. Лук мелко нарежьте, а морковь натрите на крупной терке. на сковороду налейте немного растительного масла и обжарьте овощи на небольшом огне пару минут. Затем добавьте в сковороду нарезанный болгарский перец. Перец можно нарезать как крупными кусочками, так и мелкими. Обжарьте все овощи еще 2-3 минуты и выложите поджарку в кастрюлю с супом.\n4. Добавьте в суп немного соли и специи. Проварите все вместе 1-2 минуты и снимите кастрюлю с огня.</string>
    <string name="lnch_3">Паста Карбонара</string>
    <string name="lnch_3_2">1. Спагетти\n2. Бекон\n3. Соль\n4. Вода\n5. Оливковое масло\n6. Сливки\n7. Яичные желтки\n8. Смесь трав\n9. Перец черный молотый</string>
    <string name="lnch_3_3">1. Налейте воду в подходящую по объему кастрюлю, поставьте на плиту и доведите до кипения. Добавьте соль. Опустите в воду спагетти. Варите пасту в кипящей воде 6-8 минут.\n2. Слейте воду через дуршлаг, а пасту сбрызните оливковым маслом и перемешайте.\n3. Подготовьте продукты для соуса. Ломтики бекона нарежьте на кусочки квадратной формы. Подогрейте на сковороде масло и обжарьте бекон до золотистого цвета на среднем огне, помешивая все лопаточкой.\n4. Влейте на сковороду сливки, перемешайте. Тушите все, помешивая, в течение одной минуты.\n5. Добавьте в соус итальянские травы, молотый перец и соль. Выложите в сковороду пасту и осторожно перемешайте. Подержите на огне блюдо около одной минуты, чтобы все хорошо прогрелось. Снимите сковороду с плиты.\n6. Добавьте в макароны карбонара сырой желток и быстро перемешайте так, чтобы желток разошелся по всему блюду.</string>
    <string name="dnn_1">Гречка по купечески</string>
    <string name="dnn_1_2">1. Гречка\n2. Курица\n3. Лук\n4. Морковь\n5. Томатная паста\n6. Вода\n7. Растительное масло\n8. Специи сухие\n9. Соль</string>
    <string name="dnn_1_3">1. Лук и морковь очистите и ополосните в воде. Гречку переберите, убирая мусор и неочищенные зерна. Несколько раз промойте ее в холодной воде.\n2. Куриное мясо помойте и хорошо обсушите. Нарежьте его на небольшие кусочки. На горячую сковороду налейте немного растительного масла и выложите кусочки нарезанного куриного мяса. Обжаривайте его на сильном огне, в течение 7-10 минут, чтобы оно немного поджарилось.\n3. Пока курица обжаривается, нарежьте лук, а морковь натрите на крупной терке.\n4. Затем добавьте лук и морковь в сковороду к мясу. Перемешайте и обжарьте все вместе еще минуты 3-4.\n5. Выложите в сковороду промытую гречку. Вскипятите воду. Томатную пасту размешайте в горячей воде и залейте этим гречку. По вкусу добавьте немного соли и специй. Перемешайте и доведите до кипения. Накройте сковороду крышкой и готовьте на маленьком огне в течение 13-15 минут.\n6. За время тушения гречка впитает в себя воду. Попробуйте гречку на вкус. Она должна быть мягкой.</string>
    <string name="dnn_2">Лазанья</string>
    <string name="dnn_2_2">1. Фарш мясной\n2. Помидоры\n3. Лук\n4. Листы лазаньи\n5. Чеснок\n6. Томатная паста\n7. Твердый сыр\n8. Растительное масло\n9. Соль</string>
    <string name="dnn_2_3">1. Лук очистите и нарежьте произвольно некрупными кусочками.\n2. На сковороде разогрейте растительное масло и обжарьте на нём фарш и лук в течение пяти минут, постоянно помешивая.\n3. Чеснок почистите и мелко нарубите. Помидоры помойте и нарежьте кубиками. С помидора предварительно можно снять кожицу. Отправьте в сковороду к фаршу с луком томатную пасту, нарезанные помидоры и чеснок. Добавьте соль по вкусу.\n4. Всё хорошо перемешайте, убавьте огонь до среднего и тушите фарш под закрытой крышкой около 10 минут. На этом этапе можно добавить к фаршу щепотку базилика.\n5. Пока тушится фарш, приготовьте соус Бешамель. Для этого в сотейнике на маленьком огне растопите сливочное масло.\n6. Всыпьте муку и, непрерывно помешивая венчиком, слегка её обжарьте на растопленном масле.\n7. Постепенно влейте молоко, продолжая перемешивать массу венчиком, чтобы не образовалось комочков. Доведите смесь до консистенции густых сливок, снимите с огня и остудите.\n8. Дно формы для запекания смажьте растительным маслом или застелите пекарской бумагой. Залейте дно соусом Бешамель.\n9. Первым слоем выложите листы для лазаньи. Сверху листы снова полейте соусом.\n10. Следующим слоем выложите фарш и присыпьте его слегка тёртым сыром.\n11. Залейте фарш соусом. Выкладывайте так слои, пока не заполнится форма. Последний слой с листами нужно очень хорошо залить соусом, особенно края, иначе есть вероятность, что лист теста засохнет и пригорит в процессе приготовления.\n12. Завершающим слоем посыпьте тёртый сыр.\n13. Отправьте лазанью в разогретую до 190-200 градусов духовку на 30-35 минут. Ориентируйтесь на то, что на лазанье должна образоваться аппетитная золотистая корочка. Готовое блюдо выньте из духовки и дайте настояться около 10 минут.</string>
    <string name="dnn_3">Салат Цезарь</string>
    <string name="dnn_3_2">1. Салат Айсберг\n2. Куриное филе\n3. Помидоры черри\n4. Батон\n5. Пармезан\n6. Чеснок\n7. Растительное масло\n8. Соль\n9. Перец черный молотый\n10. Оливковое масло\n11. Пармезан\n12. Яйца\n13. Горчица\n14. Сахар</string>
    <string name="dnn_3_3">1. Батон нарежьте на небольшие кубики.\n2. На сковороду налейте немного растительного масла, положите очищенный и раздавленный зубчик чеснока. Выложите нарезанный хлеб, перемешайте. Жарьте гренки на самом маленьком огне до хрустящего состояния. Время от времени их необходимо перемешивать.\n3. Куриное филе нарежьте на небольшие медальоны одинакового размера. Посолите и поперчите их.\n4. Поджарьте филе на сковороде с небольшим количеством растительного масла с двух сторон до румяной корочки. Готовое филе снимите со сковороды и остудите.\n5. Подготовьте продукты для приготовления соуса. Яйцо положите в стакан и залейте крутым кипятком. Подержите его в таком виде минуту-две.\n6. В стакан для взбивания разбейте подготовленное яйцо, положите пармезан, горчицу, сахар, соль, масло и измельченный чеснок.\n7. Короткими импульсными движениями взбейте все ингредиенты до состояния соуса.\n8. Остывшее филе нарежьте на небольшие кусочки.\n9. На дно тарелки порвите листья салата. Полейте салат соусом.\n10. Разложите кусочки курицы и порезанные помидорки.\n11. Сверху положите сухарики. Посыпьте натертым пармезаном.\n12. И в заключении еще раз полейте весь салат соусом.</string>
    <string name="cancel">Отменить таймер</string>
    <string name="n1">Таймер пункт №1</string>
    <string name="n2">Таймер пункт №2</string>
    <string name="n3">Таймер пункт №3</string>
    <string name="n4">Таймер пункт №4</string>
    <string name="n5">Таймер пункт №5</string>
    <string name="n5_1">Таймер пункт 5-1</string>
    <string name="n5_2">Таймер пункт 5-2</string>
    <string name="n6">Таймер пункт №6</string>
    <string name="n7">Таймер пункт №7</string>
    <string name="n9">Таймер пункт №9</string>
    <string name="n13_1">Таймер пункт 13-1</string>
    <string name="n13_2">Таймер пункт 13-2</string>
    <string name="brk_voice">Озвучка рецепта</string>
    <string name="cancel_voice">Отмена озвучки</string>
</resources>