<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LunchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/textViewLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35px"
            android:layout_marginBottom="100px"
            android:gravity="center"
            android:text="@string/lnch_name"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lnch_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonLunch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lnch_2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonLunch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lnch_3"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLunchBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100px"
        android:text="@string/back_btn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>