<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LunchActivity4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLunch_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35px"
                android:layout_marginBottom="10px"
                android:gravity="center"
                android:text="@string/lnch_3"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewLunch_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10px"
                android:adjustViewBounds="true"
                android:src="@drawable/imagelunch_3" />

            <TextView
                android:id="@+id/textViewLunch2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10px"
                android:text="@string/ingr"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewLunch3_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10px"
                android:text="@string/lnch_3_2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewLunch4_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prig"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewLunch5_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lnch_3_3"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonLunchBack_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100px"
        android:text="@string/back_btn"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>